Fix default navigation color in dark mode

--- a/themes/barba/layout/components/features/_feature-nav.scss
+++ b/themes/barba/layout/components/features/_feature-nav.scss
@@ -32,6 +32,8 @@
     letter-spacing: 0.212rem;
 
     @media (prefers-color-scheme: dark) {
+      color: $c-darkmode-color;
+
       [data-feature-order='0'] & {
         color: $c-menu-feature-0;
       }
